# NHS_Forecasting

./: .gitignore  Dockerfile  README.md  docker-compose.yml  make_figures.py  packages.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: sources.yaml
data/artifacts/: equipment_forecast_20260529T180633-8a79f1.parquet  equipment_forecast_latest.parquet  procedure_forecast_20260529T180633-8a79f1.parquet  procedure_forecast_20260529T182501-000f5c.parquet  report_20260529T180633-8a79f1.json  report_20260529T182501-000f5c.json  report_20260529T184323-79ee93.json  report_20260530T103608-390ebd.json  telemetry_device_day_latest.parquet  telemetry_forecast_latest.parquet  telemetry_report_latest.json  underwriting_latest.parquet
nhs_forecast/: __init__.py  config.py  logging_setup.py
nhs_forecast/api/: main.py
nhs_forecast/dashboard/: app.py
nhs_forecast/demand/: __init__.py  derive.py  scenarios.py
nhs_forecast/features/: build_features.py
nhs_forecast/ingestion/: __init__.py  base.py  diagnostic_imaging.py  hes.py  monthly_activity.py  ons_demographics.py  rtt_waiting.py  supply_chain.py  synthetic.py
nhs_forecast/mapping/: __init__.py  equipment_dim.csv  mapping_table.csv  procedure_equipment.py
nhs_forecast/models/: base.py  evaluate.py  hierarchical.py  lgbm_model.py  lstm_model.py  sarima_model.py
nhs_forecast/pipeline/: cli.py  flows.py  steps.py
nhs_forecast/storage/: __init__.py  lake.py  (+2 more)
tests/: conftest.py  test_demand.py  test_features.py  test_mapping.py  test_pipeline.py  test_telemetry.py
(+9 files in other folders)
