[project]
name = "nhs-equipment-forecast"
version = "0.1.0"
description = "Production-grade pipeline for forecasting NHS medical equipment demand from procedure volumes"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Data Engineering" }]

# Core dependencies needed to run the end-to-end pipeline.
dependencies = [
    "pandas>=2.0",
    "polars>=0.20",
    "pyarrow>=14.0",
    "duckdb>=0.10",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "requests>=2.31",
    "tenacity>=8.2",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "rich>=13.0",
    "typer>=0.9",
]

[project.optional-dependencies]
# Heavy / optional components. The pipeline degrades gracefully if absent.
deep = ["torch>=2.1"]
orchestration = ["prefect>=2.14"]
api = ["fastapi>=0.110", "uvicorn>=0.27"]
dashboard = ["streamlit>=1.30", "plotly>=5.18"]
dev = ["pytest>=7.4", "ruff>=0.3", "mypy>=1.8"]
all = [
    "torch>=2.1",
    "prefect>=2.14",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "streamlit>=1.30",
    "plotly>=5.18",
    "pytest>=7.4",
]

[project.scripts]
nhsfc = "nhs_forecast.pipeline.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nhs_forecast*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
